new resume added

--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="area-heading area-heading-style-two text-center">
-                                        <h2 class="area-title">LET'GET IN TOUCH!</h2>
+                                        <h2 class="area-title">LET'S GET IN TOUCH!</h2>
                                         <!-- <p>Or feel free to contact me with any questions!</p> -->
                                     </div>
                                 </div>
